# Task-A-master-deployment

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  README.vercel.md  pyproject.toml  vercel.json
api/: index.py  requirements.txt
backend/: config.py  contacts.db  process_one.py  requirements.txt  simple_app.py
backend/routes/: chat_routes.py
backend/services/: contact_db_search.py  contact_service.py  enhanced_chat_service.py  enhanced_rag_service.py  file_processor.py  hr_questions_handler.py  improved_document_matching.py  intelligent_keyword_extractor.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: FileManagement.jsx  Login.jsx  Register.jsx  SmartDashboard.jsx
frontend/src/services/: api.js
frontend/src/stores/: authStore.js
