[project]
name = "task-a-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "Flask>=3.1",
    "flask-cors>=6.0",
    "Flask-JWT-Extended>=4.7",
    "Flask-Session>=0.8",
    "Werkzeug>=3.1",
    "bcrypt>=4.3",
    "itsdangerous>=2.2",
    "Jinja2>=3.1",
    "MarkupSafe>=3.0",
    "click>=8.1",
    "blinker>=1.9",

    # AI / LLM
    "openai>=1.100",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-text-splitters>=0.3.9",
    "langsmith>=0.4",
    "chromadb>=1.0",

    # Document processing
    "python-docx>=1.2",
    "openpyxl>=3.1",
    "pandas>=2.3",
    "pypdf>=6.0",
    "PyPDF2>=3.0",
    "pdfplumber>=0.11",
    "pdfminer.six>=20250506",
    "lxml>=6.0",
    "filetype>=1.2",

    # HTTP / networking
    "requests>=2.32",
    "httpx>=0.28",
    "anyio>=4.10",
    "certifi>=2025.8",
    "charset-normalizer>=3.4",
    "idna>=3.10",
    "urllib3>=2.5",
    "sniffio>=1.3",

    # Config & utils
    "python-dotenv>=1.1",
    "PyYAML>=6.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "typing_extensions>=4.14",
    "packaging>=25.0",
    "tenacity>=9.1",
    "tqdm>=4.67",
    "regex>=2025.7",
    "orjson>=3.11",
    "rich>=14.1",
    "PyJWT>=2.10",
    "cachelib>=0.13",
    "toml>=0.10",
    "six>=1.17",

    # Data
    "jsonpatch>=1.33",
    "jsonpointer>=3.0",
    "marshmallow>=3.26",
    "dataclasses-json>=0.6",
]

[tool.uv]
override-dependencies = [
    "onnxruntime ; python_version < '0'",
    "pyarrow ; python_version < '0'",
    "scipy ; python_version < '0'",
    "scikit-learn ; python_version < '0'",
    "torch ; python_version < '0'",
    "pypika>=0.51.1",
    "PyPika>=0.51.1",
]
